// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackdropLoader component Matches the snapshots for BackdropLoader open false 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    class="MuiBackdrop-root makeStyles-backdrop-2"
    style="opacity: 0; visibility: hidden;"
  >
    <div
      class="MuiCircularProgress-root MuiCircularProgress-indeterminate"
      role="progressbar"
      style="width: 40px; height: 40px;"
    >
      <svg
        class="MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
          cx="44"
          cy="44"
          fill="none"
          r="20.2"
          stroke-width="3.6"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BackdropLoader component Matches the snapshots for BackdropLoader open true 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    class="MuiBackdrop-root makeStyles-backdrop-1"
    style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
  >
    <div
      class="MuiCircularProgress-root MuiCircularProgress-indeterminate"
      role="progressbar"
      style="width: 40px; height: 40px;"
    >
      <svg
        class="MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
          cx="44"
          cy="44"
          fill="none"
          r="20.2"
          stroke-width="3.6"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;
